app/assets/stylesheets/i_love_pie.css
.topbar {
    height: 40px;
    left: 0;
    overflow: visible;
    position: fixed;
    right: 0;
    top: 0;
    z-index: 1000;
    background: url("../assets/tophat-bg.jpg") repeat-x scroll left top #2F2A2B;
    color: white;
    -webkit-box-shadow: 0 0 4px black;
    -moz-box-shadow: 0 0 4px black;
    box-shadow: 0 0 4px black;
}

.page-header {
  background: -moz-linear-gradient(45deg, #020031 0%, #c34500 100%) repeat scroll 0 0 transparent;
  color: white;       
  border-bottom: 1px solid #EEEEEE;
  margin: -20px -10px 30px;
  padding: 5px 5px 5px 20px;
}

.navbar-fixed-top + .container {
 margin-top: 60px; 
}

#login{
  float: right;
  margin-right: 0;
}

body{
  background-color: #FFF;
  margin-bottom: 50px;
}

#main{
  margin: 100px;
}

#content-wrapper{
  background: white;
  padding: 10px 10px 10px 10px;
}

.controls {
  position: relative;
  top: 5px;
}

.form-horizontal .control-group {
    margin-bottom: 3px;
}

.navbar-inverse .brand, .navbar-inverse .nav > li > a{  
  color: white;
  padding: 10px 20px;
}

.navbar-inverse .nav > li > i {
  position: relative;
  float: left;
  top: 12px;
  left: 1px;
}

.navbar-inverse .navbar-inner {
  background: #444;
  /*background: -moz-linear-gradient(45deg, #020031 0%, #6D3353 100%) repeat scroll 0 0 transparent;*/
  min-height: 45px;
}

.navbar-inverse .nav > li > a:focus,
.navbar-inverse .nav > li > a:hover,
.brand > a:hover,
.brand > a:focus {
  color: #fff;
  background-color: #888;
}


.brand, .brand > a {
  color: white;
  padding-top: 8px;
  padding-bottom: 7px;
  padding-right: 5px;
  padding-left: 5px;
  font-weight: bold;
  font-size: 20px;
}

.current_page {
  background-color: #666;
}

.form-search label, .form-inline label, .form-search .btn-group, .form-inline .btn-group {
    width: 130px;
}

#header{
  position: fixed;
  left: 14px;
  top: -8px;
  color: white;
  z-index: 100000;
}

textarea {
    width: 400px;
}

form {
  margin: 0;
}

h1 {
  font-size: 26px;
}

h2 {
  font-size: 20px;
  font-weight: bold;
  text-align: left;
  border-bottom: 1px solid #F2F2F2;
  padding: 5px 5px 5px 20px;
}

h3, caption {
  margin-top: 20px;
  font-size: 16px;
  border-bottom: 2px solid #555555;
  font-weight: bold;
  text-align: left;
}

caption {
  padding-bottom: 10px;
}

legend {
  border-width: 0;
  font-size: 14px;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 0px;
  margin-bottom: 0px;
  position: relative;
  width: auto;
}


.light-border {
  border: 1px dotted #DDDDDD;
  text-align: left;  
  margin: 1em;
  padding: .5em .5em .5em 1em;
  clear: both;
  padding-bottom: 15px;
}

tr > td
{
  padding-top: 0.5em;
  padding-bottom: 0.5em;
  padding-left: 10px;
}

.table-striped > tbody > tr:nth-child(odd){
  background-color: #f9f9f9;
}


thead
{
  border: 10px solid transparent;
  font-size: 13.3px;
}

div.field_with_errors {
  display: inline;
}

th, td {
  overflow: hidden;
  width: 125px;
}

tbody {
  border-bottom: 10px solid transparent;
}

select {
  width: 200px;
}

select.small {
  width: 120px;
}

input.small {
  width: 186px;
}

div.chart_div_container{
  height: 480px;
  width: 100%;
}

#chart_title{
  padding-top: 1.5em;
  text-align: center;
  font-size: 130%;
  font-weight: bold;
}

#chart_footer > label{
  clear: both;
  width: 180px;
}

#employee_results{
  display: none;
  font-weight: normal;
  line-height: 100%;
  font-size: 1em;
  padding-right: 1.5em;
}

/**
.help:after{
  content: url("../assets/information.png");
}
*/
.information{
  display: inline;
  cursor: pointer; 
  position: relative;
  background: url("../assets/information.png") 0px no-repeat;
  top: 1px;
  padding-right: 1.5em;
  margin-right: 3.5em;
}


.tooltip{
  display: none;
  position: relative;
  max-width: 300px;
  padding: 3px 8px;
  color: #fff;
  text-align: left;
  text-decoration: none;
  background-color: #444;
  -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
          border-radius: 4px;
}

.tooltip_trigger{
  min-width: 10px;
  cursor: help;
  display: inline;
}

.tooltip_paragraph, .tooltip_li{
  font-weight: normal;
  margin: 5px;
  line-height: 150%;
}

.tooltip > ul{
  text-align: left;
}

.tooltip-table > tbody > tr:nth-child(odd){
  background-color: #333;
}

.tooltip-table > thead {
  border-bottom: 1px solid #eee;
}

.tooltip_first_column{
  width: 10em;
}

.tooltip_last_column{
  width: 1em;
}


#group_select_div > label, #service_select_div > label{
  width: 120px;
}

#group_select_div > select, #service_select_div > select, #home_header_buttons > input {
  margin-right: 2em;
}

a{
  cursor: pointer; 
}
.pagination, #results_per_page{
 font-size: 100%; 
 padding: .5em;
}
.pagination_footer{
  border-top: 1px dotted gray;
  padding-top: .5em
}
.pagination_option, .pagination >a{
  font-weight: bold;
  display: inline;
  padding: .25em;
  width: 8%; 
}
#pagination_selected > a, .pagination > em{
  font-weight: bold;
  padding: .1em .33em .2em .25em;
  width: 8%;
  background-color: #888;
  border-radius: 3px 3px 3px 3px;
  color: #FFFFFF;
}

.hidden{
  display: none;
}


.notice, .error, .message {
  background: url("../assets/status-success.png") 0.4em center no-repeat #e4fdf6;
  padding: .5em 5em;
  border: 1px solid #006600;
  margin: 7px;
  margin-left: 35px;
  -webkit-box-shadow: 0 0 7px #006600;
  -moz-box-shadow: 0 0 7px #006600;
  box-shadow: 0 0 7px #006600;
  min-height: 1.5em;
}

.error {
  background: url("../assets/status-error.png") 0.4em center no-repeat #fee7d8;
  border-color: #D85A1A;
  -webkit-box-shadow: 0 0 7px #d85a1a;
  -moz-box-shadow: 0 0 7px #d85a1a;
  box-shadow: 0 0 7px #d85a1a; 
}

.message {
  background: #E2F4FD;
  border-color:#2268AB;
  -webkit-box-shadow: 0 0 7px #2268AB;
  -moz-box-shadow: 0 0 7px #2268AB;
  box-shadow: 0 0 7px #2268AB;
}

.notice h3 {
  color: #006600; 
}

.blank-icon {
  padding-right: 17px;
}

h2 > a {
  margin-left: 30px;
  font-size: 14px;
  font-weight: bold;
}

.groovy{
  background: -moz-linear-gradient(45deg, #22F2F2 0%, purple 100%) repeat scroll 0 0 transparent;
}

@media (max-width: 979px) {
  #login {
    float: left;
  }
}

